# simulatte-persona-generator

./: .env.example  .gitignore  AI Tech Team Orchestrator Master Plan.md  DESIGN_REVIEW.md  Dockerfile  Dockerfile.benchmark  Dockerfile.the-mind  PERSONA_REUSE_MODALITIES.md  Procfile  README.md  README_DEPLOY.md  RESEARCH_SYNTHESIS_AND_DESIGN_RATIONALE.md  SIMULATTE_CONSTITUTION.md  SIMULATTE_DEFENSIBILITY_ROADMAP.md  SIMULATTE_PERSONA_GENERATOR_MASTER_SPEC.md  SIMULATTE_SARVAM_TEST_PROTOCOL.md  SIMULATTE_VALIDITY_PROTOCOL.md  conftest.py  docker-compose.yml  generate_deck.js  main.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  uat_generation.py  vercel.json
alembic/: env.py
architecture/: COGNITIVE_ARCHITECTURE.md  SYSTEM_OVERVIEW.md
calibration/: sprint_sc_empirical.py  sprint_sc_results.json
docs/: BENCHMARK_SERVICE_INTEGRATION_GUIDE.md  CORE_PLATFORM_INTEGRATION_SPEC.md  COST_REDUCTION_PLAN.md  DEPLOY_NOTES.md  KNOWN_TEST_ISSUES.md  MULTILINGUAL_UNLOCK_PROTOCOL.md  MULTI_AGENT_SOCIAL_SIMULATION.md  PERSONA_BRIEF_GUIDE.md  PERSONA_GENERATION.md  PERSONA_GENERATION_METHOD_SPECS.md  PERSONA_GENERATION_TIERS.md  PERSONA_GENERATOR_SPEC.md  PERSONA_QUALITY_ROADMAP.md  PQS_PROTOCOL.md  SANDBOX_BUILD_PLAN.md  SIMULATTE_DEEP_DIVE.md  THE_OPERATOR_FRONTEND_SPEC.md  THE_OPERATOR_SPEC.md
examples/: README.md  invoke_example.py  questions_cpg.json  scenario_cpg.json  spec_india_cpg.json  spec_littlejoys.json  spec_lo_foods.json  spec_saas.json
learnings/: MULTI_AGENT_PLAYBOOK.md  QUALITY_GATES.md  WHAT_WORKS.md
memory/: MEMORY.md  (+1 more)
scripts/: start.sh  (+2 more)
(+918 files in other folders)
